--- a/style.css
+++ b/style.css
@@ -426,8 +426,8 @@ form[name="contact"] textarea:focus {
 form[name="contact"] button[type="submit"] {
   width: 100%;
   padding: 15px;
-  background-color: #4cc9f0; /* Bright blue from image */
-  color: #000;
+  background-color: #007bff; /* Bright blue from image */
+  color: #ffffff;
   border: none;
   border-radius: 8px;
   font-weight: bold;
@@ -592,7 +592,7 @@ th, td {
 .links a {
   margin-right: 20px;
   text-decoration: none;
-  color: #0ea5e9;
+  color: #0075f1;
   text-align: center;
   border-radius: 15px;
 }
