--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ body {
 .nav-links li a:hover {
   color: #38bdf8;
   font-weight: bold;
+  text-decoration: underline;
+  transform: scale(1.2);
+  transition: 0.2s ease;
 }
 
 /* Sections */
